[gd_scene load_steps=9 format=2]

[ext_resource path="res://NPC/picture/grandpa.png" type="Texture" id=1]
[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=3]
[ext_resource path="res://NPC/script/Merrick.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 26.0768

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "finish"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 11, 10 ]
}

[node name="Merrick" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -14 )
scale = Vector2( 1.34615, 1.28947 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true
hframes = 3
vframes = 4
frame = 4
region_rect = Rect2( 18, 17, 13, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -6 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -1, -13 )
shape = SubResource( 2 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -28, -43 )
scale = Vector2( 0.165625, 0.0888889 )
normal = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/finish = SubResource( 4 )
anims/walk_left = SubResource( 5 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
